# griddy-docs

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: index.md
