[project]
name = "griddy-docs"
version = "0.1.0"
description = "Unified documentation site for the Griddy platform"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.6.0",
    "mkdocs-multirepo-plugin>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
